crates/stems-tui/src/snapshots/stems_tui__tests__logs-view-80x24.snap
---
source: crates/stems-tui/src/tests.rs
expression: text
---
 stems · minimal                 1 Graph  2 Table  3 Detail  4 [Logs]  5 Events
┌ Logs: echo-svc · following ──────────────────────────────────────────────────┐
│   12:00:00.000 INFO chaos log line 0                                         │
│   12:00:00.010 ERROR chaos log line 1                                        │
│   12:00:00.020 INFO chaos log line 2                                         │
│   12:00:00.030 ERROR chaos log line 3                                        │
│   12:00:00.040 INFO chaos log line 4                                         │
│›  12:00:00.050 ERROR chaos log line 5                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 minimal · profile - · daemon pid 4242 · ✓1 !0 ✗0 ·0 ?0 ↻0 Space pause · ? help…
