crates/stems-tui/src/snapshots/stems_tui__tests__logs-view-search-warn-80x24.snap
---
source: crates/stems-tui/src/tests.rs
assertion_line: 1094
expression: text
---
 stems · minimal                 1 Graph  2 Table  3 Detail  4 [Logs]  5 Events
┌ Logs: echo-svc · scrolled · level warn+ ─────────────────────────────────────┐
│›* 12:00:00.010 ERROR chaos log line 1                                        │
│   12:00:00.030 ERROR chaos log line 3                                        │
│   12:00:00.050 ERROR chaos log line 5                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ /line 1 · 1 match · 1/1 (n/N)                                                │
└──────────────────────────────────────────────────────────────────────────────┘
 minimal · profile - · daemon pid 4242 · ✓1 !0 ✗0 ↯0 ·0 ?0 ↻0 Space pause · j/k…
