crates/stems-tui/src/snapshots/stems_tui__tests__split-detail-120x40.snap
---
source: crates/stems-tui/src/tests.rs
assertion_line: 1274
expression: text
---
 stems · minimal                                              1 Graph  2 Table  3 [Detail]  4 Logs  5 Events  6 Scripts
┌ Detail: echo-svc · ✓ healthy ────────────────────────────────────────────────────────────────────────────────────────┐
│✓ healthy · ready (tcp)                                                                                               │
│pid 12345 · up 42s · restarts 0                                                                                       │
│ports http:18090                                                                                                      │
│                                                                                                                      │
│Scripts                                                                                                               │
│loading…                                                                                                              │
│                                                                                                                      │
│Health                                                                                                                │
│n/a                                                                                                                   │
│                                                                                                                      │
│Recent events                                                                                                         │
│-                                                                                                                     │
│                                                                                                                      │
│Config                                                                                                                │
│loading…                                                                                                              │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Logs: echo-svc · following ──────────────────────────────────────────────────────────────────────────────────────────┐
│   12:00:00.000 INFO listening on 127.0.0.1:18090                                                                     │
│›  12:00:00.005 WARN chaos endpoints enabled under /__chaos/                                                          │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ■ x stop  ↻ r restart  : scripts  o editor  ? more
 minimal · profile - · daemon pid 4242 · ✓1 !0 ✗0 ↯0 ·0 ?0 ↻0 j/k row · Enter act · [ ] stem · Esc back · ? help · q qu…
