crates/stems-tui/src/snapshots/stems_tui__tests__split-table-80x24.snap
---
source: crates/stems-tui/src/tests.rs
assertion_line: 1272
expression: text
---
 stems · minimal      1 Graph  2 [Table]  3 Detail  4 Logs  5 Events  6 Scripts
  STEM     TYPE    STATUS     REASON   PID    PORTS  UPTIME RESTARTS CPU   MEM
› echo-svc process ✓ healthy  ready (… 12345  18090  42s    0











┌ Logs: echo-svc · following ──────────────────────────────────────────────────┐
│   12:00:00.000 INFO listening on 127.0.0.1:18090                             │
│›  12:00:00.005 WARN chaos endpoints enabled under /__chaos/                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ■ x stop  ↻ r restart  : scripts  o editor  ? more
 minimal · profile - · daemon pid 4242 · ✓1 !0 ✗0 ↯0 ·0 ?0 ↻0   ? help · q quit
