crates/stems-tui/src/snapshots/stems_tui__tests__table-filtered-80x24.snap
---
source: crates/stems-tui/src/tests.rs
assertion_line: 700
expression: text
---
 stems · process-chain           1 Graph  2 [Table]  3 Detail  4 Logs  5 Events
  STEM TYPE    STATUS     REASON       PID    PORTS  UPTIME RESTARTS CPU   MEM
› b    process ✓ healthy  ready (tcp)  102    18302  8s     0



















 ■ x stop  ↻ r restart  : scripts  o editor  ? more
 process-chain · profile - · daemon pid 4242 · ✓2 !0 ✗0 ↯0 ·1 ?0 ↻1 · /b_
