crates/stems-tui/src/snapshots/stems_tui__tests__table-minimal-120x40.snap
---
source: crates/stems-tui/src/tests.rs
expression: text
---
 stems · minimal                                                         1 Graph  2 [Table]  3 Detail  4 Logs  5 Events
  STEM     TYPE     STATUS       REASON                    PID     PORTS          UPTIME  RESTARTS CPU        MEM
› echo-svc process  ✓ healthy    ready (tcp)               12345   http:18090     42s     0




































 minimal · profile - · daemon pid 4242 · ✓1 !0 ✗0 ·0 ?0 ↻0                                              ? help · q quit
